# UdemyCompleteModernCpp

./: README.md
VSC/: CMakeLists.txt
VSC/.cache/clangd/index/: a.cpp.1158B2AFB8E963E1.idx  b.cpp.2939BE2095E63877.idx  main.cpp.0EFAECE123C3F825.idx  main.cpp.123BFB6E04C1EF62.idx  main.cpp.2C70FA8BF8C7FFF2.idx  main.cpp.353B6A80757D5638.idx  main.cpp.35B22C6E733A596A.idx  main.cpp.3AF0EAE6C5A1D9A5.idx  main.cpp.47D21BB0066F4D80.idx  main.cpp.4CBFED581932ED2E.idx  main.cpp.5099E43A519F0EE8.idx  main.cpp.514576A357CB9317.idx  main.cpp.68B4DBF186D39BA9.idx  main.cpp.80F8856BD335DAF2.idx  main.cpp.A9A6ACF951C26A6A.idx  main.cpp.AB4AA43D879369F9.idx  main.cpp.B282DC4219CD4F9C.idx  main.cpp.D2DCFA0B480C7F12.idx  main.cpp.D73709CCD73032AC.idx  main.cpp.D9FDF74CA5625EAB.idx  main.cpp.DE4B631746695D56.idx  main.cpp.E1F27A5E85D9BF07.idx  main.cpp.EB5A95423D732C81.idx  main.cpp.F2AF44CCB61DA8A7.idx  main.cpp.F3D09E402E3005C8.idx  main.cpp.FB1358094BFA1D3B.idx  main.cpp.FE5B9BDCDB29F8F3.idx  mingw.invoke.h.2BFF9589371A1DBC.idx  mingw.thread.h.63B56F6C168A57C7.idx  vars.h.CC5D9FBEA904F855.idx
VSC/Section02/001FirstProgram/: CMakeLists.txt
VSC/Section02/001FirstProgram/src/: main.cpp
VSC/Section02/002BasicIO/src/: main.cpp
VSC/Section02/003Pointers/src/: main.cpp
VSC/Section02/004AssignmentPointers/libraries/: functions.cpp  functions.h
VSC/Section02/004AssignmentPointers/src/: main.cpp
VSC/Section02/006AssignmentReferences/: CMakeLists.txt
VSC/Section02/006AssignmentReferences/libraries/: functions.cpp  functions.h
VSC/Section02/006AssignmentReferences/src/: main.cpp
VSC/Section02/007RefVsPtr/src/: main.cpp
VSC/Section02/008ConstQualifier/src/: main.cpp
VSC/Section02/010Auto/src/: main.cpp
VSC/Section02/011RangeBasedForLoop/src/: main.cpp
VSC/Section02/012FunctionOverloading/src/: main.cpp
VSC/Section02/013DefaultFunctionArgs/src/: main.cpp
VSC/Section02/014InlineFunctions/src/: main.cpp
VSC/Section02/016Namespace/src/: main.cpp
VSC/Section03/MemMgmtC/src/: main.cpp
VSC/Section04/001Car/car/: Car.h
VSC/Section04/001Car/src/: main.cpp
VSC/Section04/002Structure/: CMakeLists.txt
VSC/Section04/003CarNonStaticDataMemberInit/car/: Car.cpp  Car.h
VSC/Section04/003CarNonStaticDataMemberInit/src/: main.cpp
VSC/Section04/007CarDelegatingConstructors/: CMakeLists.txt
VSC/Section05/005STDmove/: CMakeLists.txt
VSC/Section05/Operator Overloading/: CMakeLists.txt
VSC/Section08/011Union/: CMakeLists.txt
VSC/Section09/003Account/: CMakeLists.txt
VSC/Section11/002FileIO/: data.txt
VSC/Section12/014TypeTraits/: CMakeLists.txt
VSC/Section13/005Assignment/: CMakeLists.txt
VSC/Section14/: CMakeLists.txt
VSC/Section14/001std_array/: CMakeLists.txt
VSC/Section14/002std_vector/: CMakeLists.txt
VSC/Section14/003std_deque/: CMakeLists.txt
VSC/Section14/004std_list/: CMakeLists.txt
VSC/Section14/005std_set__std_multiset/: CMakeLists.txt
VSC/Section14/006std_map__std_multimap/: CMakeLists.txt
VSC/Section14/008stl_algorithms/: CMakeLists.txt
VSC/Section14/009STLproject/: CMakeLists.txt
VSC/Section15/: CMakeLists.txt
VSC/Section15/001Threads/: CMakeLists.txt
VSC/Section15/002Mutex/: CMakeLists.txt
VSC/Section15/003this_thread/: CMakeLists.txt
VSC/Section15/004TaskBasedConcurrency/: CMakeLists.txt
VSC/Section15/005Future/: CMakeLists.txt
VSC/Section15/006Promise/: CMakeLists.txt
VSC/Section15/007Exceptions/: CMakeLists.txt
VSC/Section16/: CMakeLists.txt
VSC/Section16/001Attributes/: CMakeLists.txt
VSC/Section16/002FeatureTestMacros/: CMakeLists.txt
VSC/Section16/003IfSwitchWithInit/: CMakeLists.txt
VSC/Section16/004InlineVariables/: CMakeLists.txt
VSC/Section16/005NestedNamespaces/: CMakeLists.txt
VSC/Section16/006noexcept/: CMakeLists.txt
VSC/Section16/007constexprLambda/: CMakeLists.txt
VSC/Section16/008StructuredBindings/: CMakeLists.txt
VSC/Section16/009ExpressionEvaluationOrder/: CMakeLists.txt
VSC/Section16/010MandatoryCopyElision/: CMakeLists.txt
VSC/Section17/: CMakeLists.txt
VSC/Section17/001CTAD/: CMakeLists.txt
VSC/Section17/002FoldingBasics/: CMakeLists.txt
VSC/Section17/003ifconstexpr/: CMakeLists.txt
VSC/Section18/: CMakeLists.txt
VSC/Section18/001std_optional/: CMakeLists.txt
VSC/Section18/002std_variant/: CMakeLists.txt
VSC/Section18/003std_any/: CMakeLists.txt
VSC/Section18/004parallel/: CMakeLists.txt
(+123 files in other folders)
