add_subdirectory(001std_array)
add_subdirectory(002std_vector)
add_subdirectory(003std_deque)
add_subdirectory(004std_list)
add_subdirectory(005std_set__std_multiset)
add_subdirectory(006std_map__std_multimap)
add_subdirectory(007unorderedcontainers)
add_subdirectory(008stl_algorithms)
add_subdirectory(009STLproject)