add_subdirectory(001Attributes)
add_subdirectory(002FeatureTestMacros)
add_subdirectory(003IfSwitchWithInit)
add_subdirectory(004InlineVariables)
add_subdirectory(005NestedNamespaces)
add_subdirectory(006noexcept)
add_subdirectory(007constexprLambda)
add_subdirectory(008StructuredBindings)
add_subdirectory(009ExpressionEvaluationOrder)
add_subdirectory(010MandatoryCopyElisionb)